fix: scss spacing and responsive improvements

--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 :root {
-  font-size: 16px;
+  font-size: 14px;
 }
 
 html * {
   font-family: "Open Sans", sans-serif;
   font-optical-sizing: auto;
+  color: $text-black;
 }
