--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -1,5 +1,5 @@
-$background: #e7e7e7;
-$background-surface: #d9d9d9;
+$background: #e6eef2;
+$background-surface: #eeeeee;
 $border-surface: #b2b2b2;
 $border-surface-width: 1px;
 
@@ -8,9 +8,10 @@ $primary: #e86e1e;
 
 $box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 
-$spacer: 1rem; //16px set by @typography.scss
+$spacer: 16px; //16px set by @typography.scss
 
 $text-gray-500: #494949;
+$text-black: #070600;
 
 //HEADER
 
